--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
 <body>
     <div class="div">
-        <h1>Ayodeji's Javascript Counter</h1>
+        <h1>Simple Javascript Counter</h1>
         <p class="count">0</p><br><br>
         <div class="bbt">
-            <button class="decrease">Decrease</button>
+            <button class="decrease">Decrease <span>(-)</span></button>
             <button class="reset">Reset</button>
-            <button class="increase">Increase</button>
+            <button class="increase">Increase <span>(+)</span></button>
             
+        </div>
+        <div class="footer">
+           &#169 <span>olusola2bello.dev</span> 
         </div>
         
     </div>
